Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28254

Regression on Mac: Dialogs no longer resizable (e.g. Qt Creator preferences or File>New)

    XMLWordPrintable

Details

    • macOS
    • edb4e66f5f81f2b62ed0664bf9654c36ebbf315c e84e86dc8cdab602ed19c18829e57230687a427c

    Description

      In Qt 4 it is possible to resize e.g. the settings dialog (useful e.g. as a user workaround for bugs like QTCREATORBUG-8345, and for getting more space for some option pages in general). In Qt 5 this is no longer possible.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liaqi Liang Qi
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes