Mac: fix regression to make dialog resizable

Task-number: QTBUG-28254

Change-Id: I8623a68d589bec17042935ad308f85ddc953540d
Reviewed-by: Morten Johan Sørvig <morten.sorvig@digia.com>